; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_decl_const.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_decl_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOKEN_COLON = common dso_local global i32 0, align 4
@TOKEN_ASSIGN = common dso_local global i32 0, align 4
@TOKEN_SEMICOLON = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @parse_decl_const(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %6 = call i8* (...) @parse_name()
  store i8* %6, i8** %3, align 8
  store i32* null, i32** %4, align 8
  %7 = load i32, i32* @TOKEN_COLON, align 4
  %8 = call i64 @match_token(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32* (...) @parse_type()
  store i32* %11, i32** %4, align 8
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i32, i32* @TOKEN_ASSIGN, align 4
  %14 = call i32 @expect_token(i32 %13)
  %15 = call i32* (...) @parse_expr()
  store i32* %15, i32** %5, align 8
  %16 = load i32, i32* @TOKEN_SEMICOLON, align 4
  %17 = call i32 @expect_token(i32 %16)
  %18 = load i32, i32* %2, align 4
  %19 = load i8*, i8** %3, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = call i32* @new_decl_const(i32 %18, i8* %19, i32* %20, i32* %21)
  ret i32* %22
}

declare dso_local i8* @parse_name(...) #1

declare dso_local i64 @match_token(i32) #1

declare dso_local i32* @parse_type(...) #1

declare dso_local i32 @expect_token(i32) #1

declare dso_local i32* @parse_expr(...) #1

declare dso_local i32* @new_decl_const(i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
